# sutures

./: .gitignore  .prototools  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  impl.jsonc  package.json  release-plz.toml
.claude/: settings.json
.moon/: toolchain.yml  workspace.yml
crates/comptime/: Cargo.toml  moon.yml
crates/comptime/src/: lib.rs  v1.rs
crates/comptime/tests/: comptime_equivalence.rs  comptime_knit.rs  comptime_request_direct.rs  comptime_request_iterate.rs  comptime_request_pattern.rs  comptime_response_direct.rs  comptime_response_iterate.rs  comptime_response_pattern.rs
crates/core/: Cargo.toml  moon.yml
crates/core/src/: error.rs  knit.rs  lib.rs  seam.rs  stitch.rs
crates/core/src/v1/: compile.rs  knit.rs  mod.rs  optimize.rs  schema.rs  stitch.rs  suture.rs  validate.rs
crates/core/tests/: derive_seam.rs  knit_unknit.rs  stitch_constants_edge.rs  stitch_request_direct.rs  stitch_request_iterate.rs  stitch_request_pattern.rs  stitch_response_direct.rs  stitch_response_iterate.rs  stitch_response_pattern.rs
crates/core/tests/compile_fail/: conflicting_nesting.rs  conflicting_nesting.stderr  duplicate_rename.rs  duplicate_rename.stderr  skip_with_nesting.rs  skip_with_nesting.stderr  to_enum_on_struct.rs  to_enum_on_struct.stderr  to_struct_on_enum.rs  to_struct_on_enum.stderr  tuple_struct.rs  tuple_struct.stderr  union_type.rs  union_type.stderr  unit_struct.rs  unit_struct.stderr  unknown_field_attr.rs  unknown_field_attr.stderr  unknown_variant_attr.rs  unknown_variant_attr.stderr
schema/: moon.yml  v1.json  (+2 more)
(+14 files in other folders)
