[package]
name = "sutures-comptime"
version = "0.0.1"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
sutures = { workspace = true }
syn = { version = "2.0.117", features = ["full"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"

[dev-dependencies]
sutures = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
