[package]
name = "sutures"
version = "1.0.0"
edition = "2024"
description = "Protocol-agnostic API abstraction gateway"
license = "Apache-2.0"
repository = "https://github.com/bharxhav/sutures"

[features]
default = ["derive"]
derive = ["dep:sutures-derive"]

[dependencies]
sutures-derive = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
serde_json = "1"
trybuild = "1"
